syntax = "proto3";

import "google/protobuf/descriptor.proto";
import "schema/schema.proto";

package sf.solana.spl.v1.type;

message SplInstructions {
  repeated Instruction instructions = 1;
}

message Instruction {
  option (schema.table) = {
    name: "instructions"
  };

  string instruction_id =1 [(schema.field) = { primary_key: true }];
  string transaction_hash = 2;

  oneof Item {
    Mint mint = 10;
    Burn burn = 11;
    Transfer transfer = 12;
    InitializedAccount initialized_account = 13;
  }
}

message Transfer {
  option (schema.table) = {
    name: "transfers"
    child_of: "instructions on instruction_id"
  };

  string from = 2;
  string to = 3;
  double amount = 4;
}

message Mint {
  option (schema.table) = {
    name: "mints"
    child_of: "instructions on instruction_id"
  };

  string to = 2;
  double amount = 3;
}

message Burn {
  option (schema.table) = {
    name: "burns"
    child_of: "instructions on instruction_id"
  };

  string from = 2;
  double amount = 3;
}

message InitializedAccount {
  option (schema.table) = {
    name: "initialized_accounts"
    child_of: "instructions on instruction_id"
  };

  string account = 1;
  string mint = 2;
  string owner = 3;
}